2007-02-26  Marcus Meissner  <marcus@jet.franken.de>

	* ptpip.c: Some small bugfixes, removed memory leaks.
	* library.c: Added Toshiba Gigabeat P20 (from libmtp).
	* Use different read/write block sizes (to help some MTP devices).

2007-02-14  Marcus Meissner  <marcus@jet.franken.de>

	* Added Minolta DIMAGE x21 (pictbridge mode)
	* Added Nikon Coolpix S4.
	* Added several MTP players from libmtp.

2007-02-07  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Handle exptime using integers,
	  not floats.

2007-02-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Rewritten UCS-2 handling to not
	  use strange hacks, but UCS-2LE directly.
	  (from Chuck Cranor)

2007-01-29  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added focuslock toggle option.

2007-01-25  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c: Use a fallback method if iconv is not correct.

2007-01-20  Marcus Meissner  <marcus@jet.franken.de>

	* Added Canon PowerShot A420.
	* Added Canon Digital IXUS 900Ti.
	* Added Philips PSA235 and Samsung YH-925GS from libmtp.
	* Added SanDisk Sansa c250.
	* Added Nikon CoolPix S6.

2007-01-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp-pack.c, ptp.h:
	  Free datastructures on closing the camera.

2007-01-14  Marcus Meissner  <marcus@jet.franken.de>

	* usb.c: read in 64kb blobs again (512 bytes read are
	  ineffecient).

	* library.c: On delete and rmdir also remove the
	  information from the internal handles and objectinfos.
	  Otherwise remove, upload, remove, upload cycles
	  will not work ... and gphotofs needs them.

2007-01-10  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added NULL check in MTP objlist reader.

2007-01-06  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h, ptp-private.h, usb.c:

	  Rewrote the USB lowlevel communication layer.
	  Merged  write_func, read_func, check_int and check_int_fast
	  into the ptp_usb_sendreq etc.