@@ -1,3 +1,8 @@
+2007-02-27  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: If we have a Canon USB device, but with
+	  Microsoft vendor extid, switch the exitid back to Canon.
+
 2007-02-26  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptpip.c: Some small bugfixes, removed memory leaks.
